xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__every_quantifier_empty_sequence.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"every $x in () satisfies $x eq 5\")"
---
Ok(
    Item(
        Atomic(
            Boolean(
                true,
            ),
        ),
    ),
)
