xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__every_quantifier_expr_false.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"every $x in (1, 2, 3) satisfies $x gt 2\")"
---
Ok(
    Atomic(
        Boolean(
            false,
        ),
    ),
)
