xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__every_quantifier_nested_false.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"every $x in (2, 3, 4), $y in (1, 2) satisfies $x gt $y\")"
---
Ok(
    One(
        Atomic(
            Boolean(
                false,
            ),
        ),
    ),
)
