xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__external_variable.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_with_variables(\"$foo\",\n    &[(ast::Name::without_ns(\"foo\"),\n                    vec![output :: Item ::\n                        from(output :: Atomic :: from(\"FOO\"))])])"
---
Ok(
    Item(
        Atomic(
            String(
                "FOO",
            ),
        ),
    ),
)
