xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__external_variables.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_with_variables(\"$foo + $bar\",\n    &[(ast::Name::without_ns(\"foo\"),\n                    vec![output :: Item :: from(output :: Atomic :: from(1))]),\n                (ast::Name::without_ns(\"bar\"),\n                    vec![output :: Item :: from(output :: Atomic :: from(2))])])"
---
Ok(
    Item(
        Atomic(
            Integer(
                3,
            ),
        ),
    ),
)
