xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__fn_namespace_default.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#, \"descendant::* / local-name()\")"
---
Ok(
    Sequence {
        items: [
            Atomic(
                String(
                    "doc",
                ),
            ),
            Atomic(
                String(
                    "a",
                ),
            ),
            Atomic(
                String(
                    "b",
                ),
            ),
            Atomic(
                String(
                    "c",
                ),
            ),
        ],
    },
)
