xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__fn_root.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#,\n    \"doc/a / fn:root() / doc / fn:local-name()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "doc",
                ),
            ),
        ),
    },
)
