xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__fn_root_absent.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"fn:root()\")"
---
Err(
    SpannedComponentAbsentInDynamicContext {
        src: "fn:root()",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                9,
            ),
        },
    },
)
