xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__fn_root_explicit.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#,\n    \"fn:root(doc/a) / doc / b / fn:local-name()\")"
---
Ok(
    OutputSequence {
        items: [
            Atomic(
                String(
                    "b",
                ),
            ),
        ],
    },
)
